--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "build": "react-scripts build",
     "start": "node ./bin/echobot.js",
     "start": "serve -s build",
-    "debug": "nodemon ./src/echobot.ts"
+    "debug": "nodemon ./src/echobot.ts",
+    "dev": "react-scripts start",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "heroku-postbuild": "npm run build"
